--- a/alternative.html
+++ b/alternative.html
@@ -259,7 +259,7 @@
 
   <footer>
     <div class="btn btn-primary btn-lg rectangular-pill">
-      <a href="MainPage.html" class="go-back-button">Go Back</a>
+      <a href="index.html" class="go-back-button">Go Back</a>
     </div>
     <p class="text-white"></p>
 
