--- a/immHelp.html
+++ b/immHelp.html
@@ -122,7 +122,7 @@
 
     <footer>
         <div class="btn btn-primary btn-lg rectangular-pill">
-            <a href="MainPage.html" class="go-back-button">Go Back</a>
+            <a href="index.html" class="go-back-button">Go Back</a>
         </div>
 
         <div class="row align-items-center">
