--- a/helpAtMHS.html
+++ b/helpAtMHS.html
@@ -67,7 +67,7 @@
     </section>
 
     <div class="text-center mt-4">
-      <a href="MainPage.html" class="btn btn-primary btn-lg rectangular-pill">Go Back</a>
+      <a href="index.html" class="btn btn-primary btn-lg rectangular-pill">Go Back</a>
     </div>
   </div>
   
