--- a/Info.html
+++ b/Info.html
@@ -84,7 +84,7 @@
   
     <section id= "button-container">
      <div class="btn btn-primary btn-lg rectangular-pill">
-      <a href="MainPage.html" class="go-back-button">Go Back</a>
+      <a href="index.html" class="go-back-button">Go Back</a>
      </div>
     </section>
 
