--- a/helpAtMHS.html
+++ b/helpAtMHS.html
@@ -24,7 +24,7 @@
     </div>
 
     <section>
-      <p>Three adjustment counselors are available to assist you with circumstances that impact your ability to be successful in school. This counseling is available for all students through self, parent, faculty, or community referral. You may contact the adjustment counselors through your guidance counselor. The pupil adjustment counselors’ offices are located on the first floor in room 107 and the Guidance Office. The Adjustment Counselors supervise the Take 5 Room, located in room 107. The Take 5 Room is available by appointment only. </p>
+      <p>Three adjustment counselors are available to assist you with circumstances that impact your ability to be successful in school. This counseling is available for all students through self, parent, faculty, or community referral. You may contact the adjustment counselors through your guidance counselor. The pupil adjustment counselors’ offices are located on the first floor in room 107 and the Guidance Office. The adjustment counselors supervise the common area of room 107 and it is appointment only. </p>
        <p>They are all licensed counselors with LICSW or LMHC.</p>
     </section>
 
